--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,168 @@
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* min-height: 100vh; */
+  background: rgb(98, 101, 100);
+}
 .App {
+  width:100%;
+   /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* text-align: center;  */
+}
+nav{
+  width:100%;
+  height: 60px;
+  background: #121010;
+  color:#fff;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* padding: 0 50px; */
+}
+nav .main-before-login{
+  width:100%;
+  height:45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #e0d7d7;
+  right:20px;
+  padding: 20px;
+}
+nav logo{
+  font-size: 36px;
+  text-align: center;
+}
+nav .main-heading{ 
+  /* align-items: center; */
+  margin-top: 10%;
+  margin-left:35%;
+  font-size: 40px;
+}
+nav .main-before-login .main-btn{
+  width:40%;
+  height:45px;
+  display: flex;
+  /* background-color: aqua; */
+  justify-content: space-evenly;
+  align-items: center;
+  color: #e0d7d7;
+  /* right:20px; */
+  padding: 20px;
+}
+ nav .main-before-login .main-btn button{
+  width:40%;
+  height:45px;
+  background: #d03535;
+  border:none;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0 0 0 .1);
+  cursor: pointer;
+  font-size:16px;
+  color:#333;
+  font-weight: 600;
+  margin-top:10px;
+ }
+/* nav .main-after-login{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+ nav .after-login{
+  width:100%;
+  height:20px;
+  display: flex;
+  justify-content: space-between;
+  background: #121010;
+  padding: 0 20px;
+ } */
+/* form-css */
+.form-container{
+  width:420px;
+  background: #e0d7d7;
+  /* color:#fff; */
+  padding: 30px 40px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  margin-left:35%;
+  margin-top:10%
+}
+
+.form-container h1{
+  font-size: 36px;
+  /* margin-bottom: 20px; */
+  /* color: #333; */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-container .form-group{
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-group input{
+  width: 100%;
+  height:100%;
+  border: 2px solid rgba(8, 8, 8, 0.2);
+  border-radius: 40px;
+  outline: none;
+  background: transparent;
+  font-size: 16px;
+  /* color:rgb(228, 236, 242); */
+  padding: 20px 45px 20px 20px;
+  /* text-align: center; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form-group input::placeholder{
+  color: #121010;
 }
 
-.App-link {
-  color: #61dafb;
+.form-group i{
+  position: absolute;
+  right:20px;
+  top:80%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+.form-group label{
+  font-size: 16px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container .btn{
+  width:100%;
+  height:45px;
+  background: #fff;
+  border:none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0 0 0 .1);
+  cursor: pointer;
+  font-size:16px;
+  color:#333;
+  font-weight: 600;
+}
+
+.product-list{
+  /* width:100%; */
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* padding: 0 20px; */
+}
+
+.product-list h1{
+   /* align-items: center; */
 }
