working on view details,edit, add product css

--- a/frontend/src/components/ProductList.css
+++ b/frontend/src/components/ProductList.css
@@ -107,6 +107,37 @@
   .view-details:hover {
     background-color: #1c84ff;
   }
+  .edit {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 0.7em 1.4em 0.7em 1.1em;
+    color: white;
+    background: #e3050998;
+    background: linear-gradient(
+      0deg,
+      rgb(193, 12, 15) 0%,
+      rgba(193, 12, 15) 100%
+    );
+    border: none;
+    box-shadow: 0 0.7em 1.5em -0.5em #e3050998;
+    letter-spacing: 0.05em;
+    border-radius: 20em;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  .edit:hover {
+    box-shadow: 0 0.5em 1.5em -0.5em #78707098;
+  }
+  
+  .edit:active {
+    box-shadow: 0 0.3em 1em -0.5em #69656598;
+  }
   @media (max-width: 600px) {
     .product-item {
       width: 100%;
