--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -82,7 +82,7 @@ nav .main-before-login .main-btn{
   padding: 30px 40px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  margin-left:3%;
+  margin-left:40%;
   margin-top:10%
 }
 
@@ -144,10 +144,16 @@ nav .main-before-login .main-btn{
 }
 
 .loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 .spinner {
@@ -156,5 +162,9 @@ nav .main-before-login .main-btn{
   border-radius: 50%;
   width: 60px;
   height: 60px;
-  animation: spin 1s linear infinite;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
