--- a/frontend/src/components/ProductDetail.css
+++ b/frontend/src/components/ProductDetail.css
@@ -1,6 +1,8 @@
 .product-detail-container {
     max-width: 600px;
-    margin: 0 auto;
+    margin-top: 15%;
+    margin-left:30%;
+    align-items: center;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
