--- a/frontend/src/components/CreateEditProduct.css
+++ b/frontend/src/components/CreateEditProduct.css
@@ -7,7 +7,7 @@
     bottom: 12px;
 }
 
-.form-container{
+.container-form .form-container{
     width: 100%;
     max-width: 24rem;
     padding: 1rem;
@@ -18,7 +18,7 @@
     margin-left:20px;
 }
 
-.form-title{
+.container-form .form-title{
     margin-bottom: 2rem;
     padding: 0.5rem;
     text-align: center;
@@ -26,7 +26,7 @@
     color: #ffffff;
     background-color: #6b7280;
 }
-.form-label{
+.container-form .form-label{
     display: block;
     margin-bottom: 0.5rem ;
     font-size: 0.875rem;
@@ -34,7 +34,7 @@
     font-weight: 500;
     color: #111827;
 }
-.form-input{
+.container-form .form-input{
     background-color:  #f9fafb;
     /* border-color:  #e5e7eb; */
     border-radius: 0.5rem;
@@ -46,7 +46,7 @@
     width: 100%;
     display: block;
 }
-.form-textarea{
+.container-form .form-textarea{
     display: block;
     padding: 0.625rem;
     width: 100%;
@@ -56,7 +56,7 @@
     resize: none;
 
 }
-.form-button{
+.container-form .form-button{
     width: 100%;
     background-color: #6b7280;
     border-radius: 0.5rem;
@@ -68,7 +68,7 @@
     margin-top: 1rem;
 }
 @media (min-width: 640px) {
-    .form-container{
+    .container-form .form-container{
         padding: 1.5rem;
     }
 }
